added sign in link

--- a/app/assets/stylesheets/store.css.scss
+++ b/app/assets/stylesheets/store.css.scss
@@ -136,6 +136,13 @@ blockquote p {
   border-right:1px solid #2D5289;
 
 }
+#sign_in {
+  position:  absolute;
+  margin-left:  15em;
+  text-decoration:  underline;
+
+
+}
 
 #checkbar {
   background: #FF1493;
